Робота над помилками
виправив текст та стабілізував зображення

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
                 <a href="tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
-        <h1>Effective Solutions <br> for Your Business</h1>
-        <button type="button">Order Service</button>
     </header>
     <!-- Main content -->
     <main>
 <section>
-
-    <h2>Company *hidden text*</h2>
+    <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+</section>
+    <!-- Our features -->
+<section>
+    <h2>Our features</h2>
 <ul>
     <li>
         <h3>Strategy</h3>
@@ -70,19 +72,13 @@
     <h2>What are we doing</h2>
     <ul>
         <li>
-            <a href="">
                 <img src="./images/Rectangle1.jpg" alt="company statistics" width="360">
-            </a>
         </li>
         <li>
-            <a href="">
                 <img src="./images/Rectangle2.jpg" alt="phone" width="360">
-            </a>
         </li>
         <li>
-            <a href="">
                 <img src="./images/Rectangle3.jpg" alt="notebook with phone" width="360">
-            </a>
         </li>
     </ul>
 </section>
